gui works perfectly for our purpose