@@ -1,19 +1,23 @@
 package ClientStuff;
 
+import Calcs.Vector2D;
+import Envir.House;
+import InGame.Pokemon;
+import javafx.animation.AnimationTimer;
 import javafx.application.Application;
+import javafx.scene.Scene;
+import javafx.scene.canvas.Canvas;
 import javafx.scene.image.Image;
+import javafx.scene.layout.Pane;
 import javafx.stage.Stage;
 
 import java.io.IOException;
-import java.io.InputStream;
 import java.net.MalformedURLException;
-import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.HashMap;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.util.List;
+import java.util.stream.Collectors;
 
 //--module-path "C:\Program Files\Java\openjfx-16_windows-x64_bin-sdk\javafx-sdk-16\lib" --add-modules javafx.controls,javafx.fxml
 
@@ -32,100 +36,66 @@ public class TestMain extends Application {
         launch(args);
     }
 
-    private final HashMap<Integer, Image> allImgs = new HashMap<>();
+    private final HashMap<String, Image> allImgs = new HashMap<>();
+
+    TextEvent txt = new TextEvent();
+
+    private final FightGUI fightGUI = new FightGUI(txt);
+
 
     @Override
-    public void start(Stage stage) {
-
-        stage.show();
-        /*initPokeImgs();
-
+    public void start(Stage stage) throws IOException {
+        Pokemon.init();
+        TextEvent.initTexts();
+        initImgs();
         Pane p = new Pane();
-        Scene s = new Scene(p, 400, 400);
+        Canvas can = new Canvas();
+        p.getChildren().addAll(can, txt.getGrid());
+        int height = 400;
+        Scene s = new Scene(p, height * 16D / 9, height);
         stage.setScene(s);
         stage.show();
-        int max = 151;
+        AnimationTimer t = new AnimationTimer() {
+            long timeTillNextUse = 0;
 
-        final Integer[] id = {1};
-        Button next = new Button("Next");
-        next.setLayoutX(60);
-        next.setLayoutY(10);
-        Button bef = new Button("Before");
-        bef.setLayoutX(10);
-        bef.setLayoutY(10);
-
-        Text t = new Text(id[0] + "");
-        t.setLayoutY(50);
-        t.setLayoutX(80);
-
-        int size = 150;
-        Rectangle r1 = new Rectangle(size, size);
-
-        Rectangle r2 = new Rectangle(size, size);
-
-        r1.setLayoutX(50);
-        r1.setLayoutY(100);
-        r2.setLayoutX(200);
-        r2.setLayoutY(100);
-
-        r1.setFill(new ImagePattern(allImgs.getItem(id[0])));
-        r2.setFill(new ImagePattern(allImgs.getItem(-id[0])));
-        next.setOnAction(a -> {
-            id[0] = id[0] + 1;
-            if (id[0] > 151) id[0] = 1;
-            t.setText(id[0] + "");
-            r1.setFill(new ImagePattern(allImgs.getItem(id[0])));
-            r2.setFill(new ImagePattern(allImgs.getItem(-id[0])));
-        });
-
-        bef.setOnAction(a -> {
-            id[0] = id[0] - 1;
-            if (id[0] < 1) id[0] = max;
-            t.setText(id[0] + "");
-            r1.setFill(new ImagePattern(allImgs.getItem(id[0])));
-            r2.setFill(new ImagePattern(allImgs.getItem(-id[0])));
-        });
-        p.getChildren().addAll(bef, next, t, r1, r2);*/
+            @Override
+            public void handle(long l) {
+                if (System.currentTimeMillis() > timeTillNextUse) {
+                    timeTillNextUse = System.currentTimeMillis() + 500;
+                    fightGUI.draw(can, new Vector2D(s.getWidth(), s.getHeight()), allImgs);
+//                    System.out.println("hi");
+                }
+            }
+        };
+        txt.startNewText(5, null);
+        t.start();
+        fightGUI.startTests();
     }
 
-    private void initPokeImgs() {
+    private void initImgs() {
         try {
-            int maxPoke = 151;
-            if (!Files.exists(Path.of("./res/PokemonImgs/1.png"))) {
-                Files.deleteIfExists(Path.of("./res/PokemonImgs/"));
-                Files.createDirectory(Path.of("./res/PokemonImgs/"));
-                for (int i = 1; i <= maxPoke; i++) {
-                    try (InputStream in = new URL("https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/" + i + ".png").openStream()) {
-                        Files.copy(in, Paths.get("./res/PokemonImgs/" + i + ".png"));
-                    } catch (IOException ignored) {
-                    }
-                    try (InputStream in = new URL("https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/" + i + ".png").openStream()) {
-                        Files.copy(in, Paths.get("./res/PokemonImgs/" + i + "_back.png"));
-                    } catch (IOException ignored) {
+            for (int i = 0; i < 4; i++)
+                allImgs.put("Grass" + i, new Image(String.valueOf(Paths.get("res/Envir/Grass" + i + ".png").toUri().toURL())));
+            allImgs.put("BigGrass", new Image(String.valueOf(Paths.get("res/Envir/BigGrass.png").toUri().toURL())));
+            allImgs.put("Tree", new Image(String.valueOf(Paths.get("res/Envir/Tree.png").toUri().toURL())));
+            allImgs.put("Water", new Image(String.valueOf(Paths.get("res/Envir/Water.png").toUri().toURL())));
+            allImgs.put("WaterEdge", new Image(String.valueOf(Paths.get("res/Envir/WaterEdge.png").toUri().toURL())));
+            allImgs.put("FightBottomGrass", new Image(String.valueOf(Paths.get("res/Fight/BackGrass.png").toUri().toURL())));
+            for (int i = 0; i < 1; i++) {
+                for (String dir : Arrays.stream(Player.Dir.values()).map(Enum::toString).collect(Collectors.toList())) {
+                    for (String h : Arrays.stream(Player.Hands.values()).map(Enum::toString).collect(Collectors.toList())) {
+                        allImgs.put("Player" + i + dir + h, new Image(String.valueOf(Paths.get("res/Player/" + i + "/" + dir + "/" + h + ".png").toUri().toURL())));
                     }
                 }
             }
-            Files.walk(Path.of("./res/PokemonImgs/")).forEach(f -> {
-                Matcher m = Pattern.compile("([0-9]+)(_back)?.[pP][nN][gG]").matcher(f.getFileName().toString());
-                if (m.find()) {
-                    try {
-                        allImgs.put(Integer.parseInt(m.group(1)) * (m.group(2) != null ? -1 : 1), new Image(String.valueOf(f.toFile().toURI().toURL())));
-                    } catch (MalformedURLException ignored) {
-                    }
-                }
-            });
-
-            for (int i = 1; i <= maxPoke; i++) {
-                if (allImgs.get(i) == null) {
-                    allImgs.put(i, new Image(String.valueOf(Path.of("./res/LogScreen/ImgNotFound.png").toUri().toURL())));
-                }
-
-                if (allImgs.get(-i) == null) {
-                    allImgs.put(-i, new Image(String.valueOf(Path.of("./res/LogScreen/ImgNotFound.png").toUri().toURL())));
+            for (String type : Arrays.stream(House.Type.values()).map(Enum::toString).toList()) {
+                for (String view : List.of("Outside", "Floor", "Wall", "Door")) {
+                    allImgs.put("House" + type + view, new Image(String.valueOf(Paths.get("res/Buildings/" + type + "/" + view + ".png").toUri().toURL())));
                 }
             }
-
-        } catch (IOException ignored) {
+            allImgs.put("HouseBigShelf", new Image(String.valueOf(Paths.get("res/Buildings/Market/BigShelf.png").toUri().toURL())));
+            allImgs.put("HouseSmallShelf", new Image(String.valueOf(Paths.get("res/Buildings/Market/SmallShelf.png").toUri().toURL())));
+        } catch (MalformedURLException ignored) {
         }
     }
 }
